[workspace]
members = [
    "block_engine",
    "deez_engine",
    "core",
    "jito-protos",
    #    "packet_blaster", // TODO (LB): fix
    "relayer",
    "rpc",
    "transaction-relayer",
    "web"
]
resolver = "2"

[workspace.package]
version = "0.2.4"
authors = ["Jito Network <support@jito.network>"]
repository = "https://github.com/jito-foundation/jito-relayer"
homepage = "https://jito.network/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
assert_matches = "1.5.0"
async-channel = "1.9.0"
axum = "0.5.17"
bincode = "1.3.3"
bytes = "1.4.0"
cached = "0.54.0"
chrono = "0.4.24"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "6.1.0"
ed25519-dalek = "1.0.1"
env_logger = "0.11.5"
futures-util = "0.3"
histogram = "0.6.9"
hostname = "0.4.0"
indexmap = "2.2.5"
itertools = "0.13.0"
jito-block-engine = { path = "block_engine", version = "=0.2.4" }
deez_engine = { path = "deez_engine", version = "=0.2.4"}
jito-core = { path = "core", version = "=0.2.4" }
jito-protos = { path = "jito-protos", version = "=0.2.4" }
jito-relayer = { path = "relayer", version = "=0.2.4" }
jito-relayer-web = { path = "web", version = "=0.2.4" }
jito-rpc = { path = "rpc", version = "=0.2.4" }
jwt = { version = "0.16.0", features = ["openssl"] }
keyed_priority_queue = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.17"
nix = "0.26.4"
once_cell = "1"
openssl = "0.10.51"
pem = "1.1.1"
percentage = "0.1.0"
prost = "0.12.6"
prost-types = "0.12.6"
protobuf-src = "1.1.0"
quinn-proto = "0.10.6"
quinn = "0.9"
rand = "0.8.5"
rayon = "1.7.0"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.32"
sha2 = "0.10.6"
solana-address-lookup-table-program = "=2.0.18"
solana-client = "=2.0.18"
solana-core = "=2.0.18"
solana-gossip = "=2.0.18"
solana-logger = "=2.0.18"
solana-measure = "=2.0.18"
solana-metrics = "=2.0.18"
solana-net-utils = "=2.0.18"
solana-perf = "=2.0.18"
solana-program = "=2.0.18"
solana-rayon-threadlimit = "=2.0.18"
solana-runtime = "=2.0.18"
solana-sdk = "=2.0.18"
solana-streamer = "=2.0.18"
agave-validator = "=2.0.18"
thiserror = "2.0.6"
tikv-jemallocator = { version = "0.4.3", features = ["profiling"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.12"
fast-socks5 = "0.9.6"
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.10.2"
tower = { version = "0.4.1", features = ["limit"] }
x509-parser = "0.14.0"
zeroize = "=1.3.0"

[profile.release]
# thin has minimal overhead vs none (default): https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
lto = "thin"

# enable debug symbols for profiling the heap using jeprof
# example: jeprof --web target/release/jito-transaction-relayer jeprof.3085546.9823.i24.heap
#debug = true
