[package]
name = "deez_engine"
description = "Relayer Deez Engine Client"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bincode.workspace = true
cached = { workspace = true }
dashmap = { workspace = true }
jito-core = { workspace = true }
jito-protos = { workspace = true }
log = { workspace = true }
prost-types = { workspace = true }
reqwest = "0.11.25"
solana-core = { workspace = true }
solana-metrics = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"]}
fast-socks5 = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
jito-block-engine = { workspace = true }
sha2 = "0.9.9"
async-trait = "0.1.81"
rand = "0.7.3"
serde_json = "1.0.120"
